--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__
 .pytest_cache
 .venv
 !data/README.md
+!data/screenshot.webp
 !models/README.md
 !outputs/README.md
 .vscode/settings.json
